must-gather.local.4557266359843115887/cluster-scoped-resources/config.openshift.io/ingresses.yaml
---
apiVersion: config.openshift.io/v1
items:
- apiVersion: config.openshift.io/v1
  kind: Ingress
  metadata:
    annotations:
      ingress.operator.openshift.io/default-enable-http2: "true"
    creationTimestamp: "2022-05-24T18:05:21Z"
    generation: 1
    name: cluster
    resourceVersion: "43789"
    uid: cd152782-f877-4a3f-83ef-5e8c854ee79e
  spec:
    domain: apps.odf-service.dif5.p1.openshiftapps.com
  status:
    componentRoutes:
    - conditions:
      - lastTransitionTime: "2022-05-24T18:28:49Z"
        message: All is well
        reason: AsExpected
        status: "False"
        type: Progressing
      - lastTransitionTime: "2022-05-24T18:28:49Z"
        message: All is well
        reason: AsExpected
        status: "False"
        type: Degraded
      consumingUsers:
      - system:serviceaccount:oauth-openshift:authentication-operator
      currentHostnames:
      - oauth-openshift.apps.odf-service.dif5.p1.openshiftapps.com
      defaultHostname: oauth-openshift.apps.odf-service.dif5.p1.openshiftapps.com
      name: oauth-openshift
      namespace: openshift-authentication
      relatedObjects:
      - group: route.openshift.io
        name: oauth-openshift
        namespace: openshift-authentication
        resource: routes
kind: IngressList
metadata:
  continue: ""
  resourceVersion: "295192"
